--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 venv
-/agents/.env
+#/agents/.env
 /agents/token
 /agents/credentials.json
 token.pickle
 agents/credentials-old.json
 uv.lock
 .python-version
-.env
+#.env
